<resources>
    <string name="app_name">CDM Canteen App</string>
    <string name="startUpText">Enjoy Every Bite</string>
    <string name="enjoy_every_bite">Enjoy Every Bite Without Troublesome </string>
    <string name="sayings">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</string>
    <string name="startBtn">Start</string>
    <string name="logoDesc">LOGO</string>
    <string name="register_text_btn">Register</string>
    <string name="login_text_btn">Login</string>
    <string name="lets_login">Let\'s Login</string>
    <string name="dont_have_an_account_register">Dont have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="student_id">Student ID</string>
    <string-array name="payment_methods">
        <item>Pay on Pickup</item>
        <item>GCash</item>
    </string-array>
    <string name="descriptionExample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="account_sayings">Welcome to Stall Canteen! Log in to access your account, or register to unlock convenient ordering and pre-ordering.</string>
</resources>