<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/account"
        tools:ignore="ContentDescription" />



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="-131dp">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/logoDesc"
                android:src="@drawable/logo_black"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom2"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight2"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft2"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvAccount"
                style="@style/h3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/account_sayings"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/logo2"
                app:layout_constraintStart_toStartOf="@+id/logo2"
                app:layout_constraintTop_toTopOf="@+id/guidelineBottom2"
                tools:ignore="TextSizeCheck" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@style/blueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/white_background"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/login_text_btn"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
                app:layout_constraintTop_toBottomOf="@id/tvAccount" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                style="@style/blueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:background="@drawable/blue_background"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/register_text_btn"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight2"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft2"
                app:layout_constraintTop_toBottomOf="@id/loginBtn" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.23" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.42" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.58" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>