<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/account"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_black"
                app:layout_constraintBottom_toTopOf="@+id/tvLogin"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/lets_login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/tvLogin2"
                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/logo3" />

            <TextView
                android:id="@+id/tvLogin2"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/dont_have_an_account_register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin"
                app:layout_constraintBottom_toTopOf="@+id/etStudentID"
                />

            <EditText
                android:id="@+id/etStudentID"
                style="@style/editText"
                android:layout_height="@dimen/edittextHeight"
                android:layout_width="0dp"
                android:layout_marginTop="50dp"
                android:autofillHints="01-01234"
                android:hint="Student/Staff ID"
                android:inputType="text|number"
                android:textColor="#313131"
                android:textColorHint="#737373"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin2" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="8dp"
                android:autofillHints="gmail.com"
                android:hint="@string/email"
                android:textColorHint="#737373"
                android:inputType="textEmailAddress"
                android:textColor="#313131"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/etStudentID" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittextHeight"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:textColorHint="#737373"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#313131"
                app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="Forgot Password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                app:layout_constraintBottom_toTopOf="@+id/loginBtn"
                android:layout_marginTop="20dp"
                />

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/loginBtn"
                style="@style/blueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:background="@drawable/blue_background"
                android:fontFamily="sans-serif"
                android:gravity="center"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_width="4dp"
                android:text="@string/login_text_btn"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
                tools:layout_editor_absoluteY="596dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLoginLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLoginRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>